fixe transition mobile 8

--- a/styles/components/global/footer.scss
+++ b/styles/components/global/footer.scss
@@ -87,9 +87,6 @@ footer {
             }
         }
     }
-    @media (max-width: 992px) {
-      display: none;
-    }
     @media (max-width: 468px) {
         .flex-wrapper {
             flex-direction: column;
